Dark theme issue resolved. Create-Transaction linked. Profile page alignment resolved

--- a/system/core/static/css/petDetails.css
+++ b/system/core/static/css/petDetails.css
@@ -237,12 +237,16 @@ html{
 
 }
 
-.mainbody .description .header{
+.mainbody .description .header h1{
     width: calc(100% - 10px);
     height: fit-content;
    display: block;
-   margin: 0 auto;
+   margin: 20px auto;
     overflow: hidden;
+    font-size:20px;
+    letter-spacing: 1px;
+    color: rgba(131, 131, 131, 0.849);
+    font-weight: 600;
     /* border: 1px solid rgb(12, 46, 5) ; */
 
 }
@@ -252,17 +256,19 @@ html{
     height: fit-content;
     float: left;
     overflow: hidden;
+    margin-top: 20px;
     /* border: 1px solid rgb(12, 46, 5) ; */
 
 }
 .mainbody .description .right{
     width: calc(50% - 10px);
+    margin-top: 20px;
     height: fit-content;
     float: right;
     overflow: hidden;
     padding-left: 20px;
 
-    border: 1px solid rgb(0, 247, 255) ;
+    /* border: 1px solid rgb(0, 247, 255) ; */
     
 }
 
@@ -279,9 +285,11 @@ html{
 
 }
 
+
 .mainbody .description .right .product_header,
 .mainbody .description .left .product_header{
     width: calc(100% - 20px );
+    position: relative;
     height: fit-content;
     padding: 10px 0;
     font-size: 35px;
@@ -295,6 +303,14 @@ html{
     /* border: 1px solid red; */
 
 }
+
+.mainbody .description .right .add_post{
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 10px;
+}
+
 .mainbody .description .right .product_info, .mainbody .description .left  .product_info{
     width: calc(100% - 20px );
     height: fit-content;
